	- Compiles, but messy for collections of IFixedFieldSetting. Could cast generic type to object, but probably going to fail during runtime.

9/4/18
	- Added comments in LayoutDescriptor on the challenges of using a generic field inside a collection. 
		-   // This will throw runtime exception. Setting is of type TProperty. 
            // Trying to the fixedfieldsetting add to the collection of fields, that are currently of type <object>
            // I can't think of a way to strongly type the collection of fields. 
            //     - Would typically use a generic, but can't mix generics in a collection, right? 
            //     - e.g. at element zero of an array, can't have field<bool>, element one field<string>, etc...
            // Generated an example here: C:\Projects\FlatFile\FlatFile.FixedWidth\IdeaSandbox\CollectionWithGeneric.linq

9/5/18
	- See line 119 in LayoutDescriptor for example of issue
		- Each field has a TypeConverter of a generic type. No problem right? Use a generic on IFixedFieldSetting - but IFixedFieldSetting 
		  can't mix generics, because it's a collection: 
		  IDictionary<int, IFixedFieldSetting<object>> fields; 
		  Used object as an example for now to get it to compile when IFixedFieldSetting requires a generic to TProperty as return
		  type of the type converter.
	- We could perhaps remove the generic from IFixedFieldSetting, but that tells us the return type of the TypeConverter field: 
	  ITypeConverter<TProperty> TypeConverter { get; set; }
	- One workaround is to use properties - GenericCollectionWithProperties.linq

9/6/18
	- Finished static factory for convention based type converters
	- Added unit test for int converter. Other primitive types need unit tests next. 

9/10/18
	- Added unit tests for all other primitive type defaults for the convention based type converters
