@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IdeaSandbox\MockupForMixedGenerics.cs" />
     <Compile Include="Implementation\FixedWidthFileWriter.cs" />
     <Compile Include="Implementation\TypeConverters\DateTimeTypeConverter.cs" />
     <Compile Include="Implementation\TypeConverters\BooleanTypeConverter.cs" />
@@ -70,6 +71,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="IdeaSandbox\AbstractFactoryForVehicles.linq" />
+    <None Include="IdeaSandbox\CollectionWithNonGenericBaseClass.linq" />
     <None Include="IdeaSandbox\DynamicGeneric.linq" />
     <None Include="IdeaSandbox\DynamicGenericSimplified.linq" />
     <None Include="IdeaSandbox\CollectionWithGeneric.linq" />
